build_netlify/styles.css
/* ... */
.social-links ul li {
  list-style: none;
  margin: 0px 10px !important;
  margin-top: 20px !important;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 30px;
  width: 30px;
  border-radius: 50%;
  transition: all 0.5s;
}
.social-links ul li:hover {
  transform: rotate(0deg) skew(0deg) translate(0, -5px) !important;
}

.social-links ul li .fa:hover {
  color: white;
}

.social-links ul li:nth-child(1):hover {
  background-color: #3b5999;
}
.social-links ul li:nth-child(2):hover {
  background-color: #55acee;
}
.social-links ul li:nth-child(3):hover {
  background: radial-gradient(
    circle at 30% 107%,
    #fdf497 0%,
    #fdf497 5%,
    #fd5949 45%,
    #d6249f 60%,
    #285aeb 90%
  );
}
.social-links ul li:nth-child(4):hover {
  background-color: #0077b5;
}

a {
  color: inherit;
}
@media (max-width: 768px) {
  .resmb {
    margin-bottom: 10vw !important;
  }
  .card-img-top-dev {
    height: 24rem !important;
  }
  .card {
    width: 23rem;
    height: 380px !important;
  }
  .social-links ul {
    top: 64%;
    margin-top: -13px;
  }
  /* border: 1px solid red; */
}

/* ------------------------------------------------ */
/* FAQ's */
/* ------------------------------------------------ */

.accordion_card {
  box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.3);
  margin: 1.3%;
  transition: transform 0.2s ease-out;
  transition: all 0.5s ease-out;
  width: 100%;
  height: 10%;
  color: #262626;
  background-color: #fff;
}

.card-header {
  background-color: transparent !important;
}

.accordion_card a:hover {
  color: #8cbecf;
  text-decoration: none;
}

.question {
  font-size: 175%;
  color: #262626;
}

.answer {
  font-size: 150%;
  color: #262626;
}

/* ------------------------------------------------ */
/* CONTACT US CSS */
/* ------------------------------------------------ */
.contact-wrap {
  width: 80%;
  height: auto;
  margin: auto;
  display: flex;
  flex-wrap: wrap;
}

.contact-in {
  padding: 40px 30px;
}

.contact-in:nth-child(1) {
  flex: 30%;
  background: url(../images/1.jpg);
  color: #2f2e41;
}

.contact-in:nth-child(2) {
  flex: 45%;
}

.contact-in:nth-child(3) {
  flex: 25%;
  padding: 0;
}

.contact-in h1 {
  font-size: 30px;
  color: #2f2e41;
  text-transform: uppercase;
  font-weight: 500;
  margin-bottom: 20px;
  text-align: center;
}

.contact-in h2 {
  font-size: 30px;
  font-weight: 400;
  margin-bottom: 15px;
  text-align: center;
  color: #2f2e41;
}

.contact-in h2 i {
  font-size: 16px;
  width: 40px;
  height: 40px;
  margin-right: 10px;
  background: #2f2e41;
  color: white;
  border-radius: 50px;
  line-height: 40px;
  text-align: center;
}

.contact-in p {
  font-size: 25px;
  font-weight: 300;
  margin-bottom: 20px;
  text-align: center;
  color: #2f2e41;
}

.contact-in ul {
  padding: 0;
  margin: 0;
}

.contact-in ul li {
  list-style: none;
  display: inline-block;
  margin-right: 5px;
  margin-top: 5px;
}

.contact-in ul li a {
  display: block;
  width: 30px;
  height: 30px;
  text-align: center;
  background: #fff;
  border-radius: 50px;
}

.contact-in ul li a i {
  font-size: 14px;
  line-height: 30px;
  color: #000;
}

.contact-in form {
  width: 100%;
  height: auto;
}

.contact-in-input {
  width: 100%;
  height: 40px;
  margin-bottom: 20px;
  border: 1px solid #fff;
  outline: none;
  padding-left: 5px;
  background: transparent;
  color: #fff;
  font-size: 12px;
  font-weight: 300;
  font-family: 'Poppins', sans-serif;
}

.contact-in-input::-webkit-input-placeholder {
  color: #fff;
}

.contact-in-input::-moz-placeholder {
  color: #fff;
}

.contact-in-input:-ms-input-placeholder {
  color: #fff;
}

.contact-in-input::-ms-input-placeholder {
  color: #fff;
}

.contact-in-input::placeholder {
  color: #fff;
}

.contact-in-textarea {
  width: 100%;
  height: 140px;
  margin-bottom: 20px;
  border: 1px solid #fff;
  outline: none;
  padding-top: 5px;
  padding-left: 5px;
  background: transparent;
  color: #fff;
  font-size: 12px;
  font-weight: 300;
  font-family: 'Poppins', sans-serif;
}

.contact-in-textarea::-webkit-input-placeholder {
  color: #fff;
}

.contact-in-textarea::-moz-placeholder {
  color: #fff;
}

.contact-in-textarea:-ms-input-placeholder {
  color: #fff;
}

.contact-in-textarea::-ms-input-placeholder {
  color: #fff;
}

.contact-in-textarea::placeholder {
  color: #fff;
}

.contact-in-btn {
  width: 100%;
  height: 40px;
  border: 1px solid #fff;
  outline: none;
  background: transparent;
  color: #fff;
  font-size: 17px;
  font-weight: 300;
  font-family: 'Poppins', sans-serif;
  cursor: pointer;
}

.contact-in iframe {
  width: 100%;
  height: 100%;
}

@media (max-width: 768px) {
  .contact-in h1 {
    font-size: 25px !important;
  }
  .contact-in h2 {
    font-size: 22px !important;
  }
  .contact-in p {
    font-size: 18px !important;
  }
  iframe {
    height: 20em;
  }
}

@media only screen and (max-width: 480px) {
  .contact-in:nth-child(1) {
    flex: 50%;
  }

  .contact-in:nth-child(2) {
    flex: 50%;
  }

  .contact-in:nth-child(3) {
    flex: 100%;
  }
  iframe {
    height: 18em;
  }
}

@media only screen and (max-width: 360px) {
  .contact-in:nth-child(1) {
    flex: 50%;
  }

  .contact-in:nth-child(2) {
    flex: 50%;
  }

  .contact-in:nth-child(3) {
    flex: 100%;
  }
}

/*SOCIAL MEDIA*/
.social-menu ul {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 0;
  margin: 0;
  display: flex;
}
.social-menu ul li {
  list-style: none;
  margin: 0 10px;
}
.social-menu ul li .fa {
  color: #000000;
  font-size: 25px;
  line-height: 50px;
  transition: 0.5s;
}
.social-menu ul li .fa:hover {
  color: #ffffff;
  text-decoration: none;
}
.social-menu ul li a {
  position: relative;
  display: block;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background-color: white;
  text-align: center;
  transition: 0.5s;
  transform: translate(0, 0px);
  box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.5);
}
/* ... */

